Prevent layout shifting

--- a/src-ui/src/app/components/admin/tasks/tasks.component.scss
+++ b/src-ui/src/app/components/admin/tasks/tasks.component.scss
@@ -16,6 +16,39 @@ pre {
     cursor: pointer;
 }
 
+.tasks-table {
+    width: 100%;
+}
+
+@media (min-width: 992px) {
+    .tasks-table {
+        table-layout: fixed;
+    }
+
+    .tasks-table .select-col {
+        width: 3rem;
+    }
+
+    .tasks-table .created-col {
+        width: 13rem;
+        white-space: nowrap;
+    }
+
+    .tasks-table .results-col {
+        width: 28%;
+    }
+
+    .tasks-table .actions-col {
+        width: 14rem;
+        white-space: nowrap;
+    }
+
+    .tasks-table .name-col,
+    .tasks-table .results-col {
+        overflow: hidden;
+    }
+}
+
 .btn .spinner-border-sm {
     width: 0.8rem;
     height: 0.8rem;
